[tool.poetry]
name = "chaingang"
version = "0.1.0"
description = "fun with markov"
authors = ["Lamar <lamar@divvydose.com>"]

[tool.poetry.dependencies]
python = "^3.6"
markovify = "^0.7.1"

[tool.poetry.dev-dependencies]
ipdb = {version = "^0.11.0",optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
